Let admins securely update roster group membership
